# kambala-experiments

./: .gitmodules  CMakeLists.txt
cmake/: FindMCU.cmake
src/: CMakeLists.txt  FT6336.c  NfcDecoder.c  epd27.c  epd27.h  gcc_Debug.h  iostubs.c  main.c  psram.c  tests.h  utils.h
src/app-hardtesting/: AT25.c  AT25.h  FT6336.h  NfcDecoder.h  alzlogo.h  tests.c  utils.c
src/app-ledblink/: main.cpp
